Implementation of user registration for authentication

--- a/spring-boot-expert/src/main/resources/messages.properties
+++ b/spring-boot-expert/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ client-id.field.required=Please provide the client id
 total.field.required=The total field is required
 description.field.required=The description field is required
 unitPrice.field.required=The unitPrice field is required
+login.field.required=The login field is required
+password.field.required=The password field is required
